syntax = "proto3";

package justifications;

option go_package = "github.com/pkt-cash/pktd/lnd/lnrpc/protos/justifications";

// LockToken the token locking
// We can get the HTLC hash by lockID from lock collection
message LockToken {
    // count — number of locking token
    int32 count = 1; 
    // owner — previous owner 
    string owner = 2;
    // new_owner — new owner of tokens
    string new_owner = 3;
    // proof_count — lifetime in PKT blocks
    int32 proof_count = 4;
    // htlc_secret_hash — htlc genereted issuer 
    string htlc_secret_hash = 5; 
}

// TranferToken receiving funds for tokens and unlcok them
message TranferToken {
    // htlc_secret_hash — htlc genereted issuer
    string htlc_secret_hash = 1;
    // lock_id — hash with information abiut lock justification
    LockToken lock = 2;
}

// LockTimeOver timeout for token locking
message LockTimeOver {
    // proof_elapsed — PKT block hash confirming expiration lock
    string proof_elapsed = 1;
    // lock_id — hash with information abiut lock justification
    string lock_id = 2;
}
